[project]
name = "airflow-agileactors"
version = "0.1.0"
description = "AA Service Toolkit"
readme = "README.md"
authors = [
    { name = "Vasileios Bardakos", email = "vasilisbardakos@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"
